tests/typecheck/bad/bad-map-key2.scilla

Nil {Map Bool Uint32}

